css/style.css
/* ... */
@media screen and (max-width: 504px) {
	/* Hero */
	.hero {
		height: 58vh;
	}
	.hero div.title-content, .hero #title {
		width: 300px;
	}
	.hero #title {
		height: 50px;
	}
	.hero h5 {
		font-size: 16px;
	    margin-bottom: 15px;
	}


	/* About Us */
	#about .section-container {
	    background-position: 50% 40%;
	}
	#about .section-container .top-border {
		height: 10px;
		margin-bottom: 58px;
	}
	#about .section-container .about-heading {
		display: none;
	}
	#about .section-container .profile.april .bride.portrait, #about .section-container .profile.chloe .bride.portrait {
		margin: 0 auto 0 3%;
		height: 302px;
    	width: 287px;
	}
	
	
	/* Destination */
	#destination .video, #destination .video .video-overlay {
		min-height: 370px;
	}
	#destination .video .venue-info h1 {
		font-size: 34px;
	}
	#destination .video .top-border {
		width: 88%;
	}
	#destination .video .venue-info h5 {
		width: 75%;
		margin: 0 auto;
	}
	#destination .video .venue-info .btn {
		margin-top: 18px;
	}


	/* Image Breaker - Sunset Dip */
	.image-breaker.sunset-dip {
		background: url(../images/imgbreaker_sunsetdip_mobile@2x.png);
		background-size: cover;
		background-position: right;
		min-height: 380px;
	}


	/* Accomodations */
	#accomodations .section-content .suggestion p {
		font-size: 16px;
	}


	/* Registry */
	#registry .image-breaker.child {
		left: -5px;
	}
}





/*
==============================================
Fade In
==============================================
*/

/* make keyframes that tell the start state and the end state of our object */
@-webkit-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
@-moz-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
@keyframes fadeIn { from { opacity:0; } to { opacity:1; } }

.fade-in {
  opacity:0;  /* make things invisible upon start */
  -webkit-animation:fadeIn ease-in 1;  /* call our keyframe named fadeIn, use animattion ease-in and repeat it only 1 time */
  -moz-animation:fadeIn ease-in 1;
  animation:fadeIn ease-in 1;

  -webkit-animation-fill-mode:forwards;  /* this makes sure that after animation is done we remain at the last keyframe value (opacity: 1)*/
  -moz-animation-fill-mode:forwards;
  animation-fill-mode:forwards;

  -webkit-animation-duration:1s;
  -moz-animation-duration:1s;
  animation-duration:1s;
}

.fade-in.first {
  -webkit-animation-delay: 0.7s;
  -moz-animation-delay: 0.7s;
  animation-delay: 0.7s;
}

.fade-in.second {
  -webkit-animation-delay: 1.2s;
  -moz-animation-delay:1.2s;
  animation-delay: 1.2s;
}

.fade-in.third {
  -webkit-animation-delay: 1.6s;
  -moz-animation-delay: 1.6s;
  animation-delay: 1.6s;
}

